--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
 	<packaging>war</packaging>
 
 	<properties>
-    <spring.version>3.2.2.RELEASE</spring.version>
-    <project.version>${project.version}</project.version>
+		<spring.version>3.2.2.RELEASE</spring.version>
+		<project.version>${project.version}</project.version>
 		<spring-security.version>3.2.0.RELEASE</spring-security.version>
 	</properties>
 
@@ -43,11 +43,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.nextprot</groupId>
-			<artifactId>nextprot-search</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.nextprot</groupId>
 			<artifactId>nextprot-auth-core</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
@@ -55,6 +50,14 @@
 			<groupId>org.biojava</groupId>
 			<artifactId>biojava</artifactId>
 			<version>3.0</version>
+		</dependency>
+
+		<!-- SOLR -->
+
+		<dependency>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-solrj</artifactId>
+			<version>4.4.0</version>
 		</dependency>
 
 
@@ -134,6 +137,14 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+
+
+		<!-- Apache Jena for SPARQL queries -->
+		<dependency>
+			<groupId>org.apache.jena</groupId>
+			<artifactId>jena-fuseki</artifactId>
+			<version>1.0.1</version>
 		</dependency>
 
 
@@ -267,30 +278,30 @@
 			<artifactId>dbunit</artifactId>
 			<version>2.4.9</version>
 		</dependency>
-		
 
-    <!--  manage git info -->
-    <dependency>
-      <groupId>com.lukegb.mojo</groupId>
-      <artifactId>gitdescribe-maven-plugin</artifactId>
-      <version>2.0</version>
-      <exclusions>
-        <exclusion>
-          <groupId>xml-apis</groupId>
-          <artifactId>xml-apis</artifactId>
-        </exclusion>
-      </exclusions>     
-    </dependency> 
+
+		<!-- manage git info -->
+		<dependency>
+			<groupId>com.lukegb.mojo</groupId>
+			<artifactId>gitdescribe-maven-plugin</artifactId>
+			<version>2.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>xml-apis</groupId>
+					<artifactId>xml-apis</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 
 		<!-- Need this for the ehcache logging -->
 
-                            
+
 		<dependency>
-		  <groupId>log4j</groupId>
-		  <artifactId>log4j</artifactId>
-		  <version>1.2.16</version>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.16</version>
 		</dependency>
-		
+
 	</dependencies>
 
 	<build>
@@ -299,20 +310,20 @@
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
 				<configuration>
-<!-- 					<jettyXml>src/etc/jetty-jmx.xml</jettyXml>                   -->
-<!-- 					<scanIntervalSeconds>10</scanIntervalSeconds> -->
-          <webAppConfig>
-            <contextPath>/${project.name}</contextPath>
-          </webAppConfig>
+					<!-- <jettyXml>src/etc/jetty-jmx.xml</jettyXml> -->
+					<!-- <scanIntervalSeconds>10</scanIntervalSeconds> -->
+					<webAppConfig>
+						<contextPath>/${project.name}</contextPath>
+					</webAppConfig>
 					<stopKey>foo</stopKey>
 					<stopPort>9999</stopPort>
 					<systemproperties>
-            <systemproperty>
-              <name>org.apache.commons.logging.Log</name>
-              <value>
-                org.apache.commons.logging.impl.Log4JLogger
-              </value>
-            </systemproperty>
+						<systemproperty>
+							<name>org.apache.commons.logging.Log</name>
+							<value>
+								org.apache.commons.logging.impl.Log4JLogger
+							</value>
+						</systemproperty>
 						<systemproperty>
 							<name>log4j.configuration</name>
 							<value>file:./src/main/resources/log4j.xml</value>
@@ -320,14 +331,14 @@
 					</systemproperties>
 				</configuration>
 				<dependencies>
-				    <!-- Need this for the ehcache logging -->
-            
-		    <dependency>
-		      <groupId>log4j</groupId>
-		      <artifactId>log4j</artifactId>
-		      <version>1.2.16</version>
-		    </dependency>
-		            				    
+					<!-- Need this for the ehcache logging -->
+
+					<dependency>
+						<groupId>log4j</groupId>
+						<artifactId>log4j</artifactId>
+						<version>1.2.16</version>
+					</dependency>
+
 				</dependencies>
 				<executions>
 					<execution>
@@ -351,46 +362,46 @@
 				</executions>
 			</plugin>
 
-      <plugin>
-        <groupId>com.lukegb.mojo</groupId>
-        <artifactId>gitdescribe-maven-plugin</artifactId>
-        <version>2.0</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>gitdescribe</goal>
-            </goals>
-            <id>git-describe</id>
-            <phase>initialize</phase>
-					  <configuration>
-					    <extraArguments>
-					      <param>--all</param>
-					    </extraArguments>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>			
-      
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>properties-maven-plugin</artifactId>
-        <version>1.0-alpha-2</version>
-        <executions>
-          <execution>
-            <phase>generate-resources</phase>
-            <goals>
-              <goal>write-project-properties</goal>
-            </goals>
-            <configuration>
-              <outputFile>
-                ${project.build.outputDirectory}/META-INF/pom.properties
-              </outputFile>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      
-            
+			<plugin>
+				<groupId>com.lukegb.mojo</groupId>
+				<artifactId>gitdescribe-maven-plugin</artifactId>
+				<version>2.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>gitdescribe</goal>
+						</goals>
+						<id>git-describe</id>
+						<phase>initialize</phase>
+						<configuration>
+							<extraArguments>
+								<param>--all</param>
+							</extraArguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
+				<version>1.0-alpha-2</version>
+				<executions>
+					<execution>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>write-project-properties</goal>
+						</goals>
+						<configuration>
+							<outputFile>
+								${project.build.outputDirectory}/META-INF/pom.properties
+							</outputFile>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+
 		</plugins>
 	</build>
 </project>
