--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,7 +32,7 @@
       </filter-mapping>    
       
        
-    <!--  configure security -->  
+    <!--  configure security 
     <filter>
             <filter-name>springSecurityFilterChain</filter-name>
             <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -46,7 +46,8 @@
             <filter-name>springSecurityFilterChain</filter-name>
             <url-pattern>/*</url-pattern>
     </filter-mapping>
-
+	-->  
+    
     <!-- Setting UTF-8 -->
 	  <filter>
 	    <filter-name>Spring character encoding filter</filter-name>
