adding export.workers.count property to the properties file to set the number of workers used in the export

--- a/src/main/resources/META-INF/application-dev.properties
+++ b/src/main/resources/META-INF/application-dev.properties
@@ -18,6 +18,9 @@ db.user.maxPoolSize=1
 db.user.minPoolSize=1
 db.user.initialPoolSize=1
 
+#export properties
+export.workers.count=8
+
 
 #RDF database
 #timeout in ms
