--- a/src/main/webapp/WEB-INF/velocity/velocity.properties
+++ b/src/main/webapp/WEB-INF/velocity/velocity.properties
@@ -3,3 +3,4 @@ input.encoding=UTF-8
 default.contentType=UTF-8
 eventhandler.referenceinsertion.class=org.apache.velocity.app.event.implement.EscapeXmlReference
 eventhandler.escape.xml.match=/^(?!.*UNESCAPED_CDATA).*$/
+class.resource.loader.cache=true
