sounds like the memory leak problem is not solved, trying something different....

--- a/src/main/webapp/WEB-INF/velocity/velocity.properties
+++ b/src/main/webapp/WEB-INF/velocity/velocity.properties
@@ -3,4 +3,5 @@ input.encoding=UTF-8
 default.contentType=UTF-8
 eventhandler.referenceinsertion.class=org.apache.velocity.app.event.implement.EscapeXmlReference
 eventhandler.escape.xml.match=/^(?!.*UNESCAPED_CDATA).*$/
+runtime.log.logsystem.class=org.apache.velocity.runtime.log.NullLogSystem
 class.resource.loader.cache=true
