trying to remove objects from context

--- a/src/main/webapp/WEB-INF/velocity/velocity.properties
+++ b/src/main/webapp/WEB-INF/velocity/velocity.properties
@@ -5,3 +5,4 @@ eventhandler.referenceinsertion.class=org.apache.velocity.app.event.implement.Es
 eventhandler.escape.xml.match=/^(?!.*UNESCAPED_CDATA).*$/
 runtime.log.logsystem.class=org.apache.velocity.runtime.log.NullLogSystem
 class.resource.loader.cache=true
+resource.manager.cache.size=10
