--- a/pom.xml
+++ b/pom.xml
@@ -198,14 +198,14 @@
 			<version>1.8.4</version>
 		</dependency>
 		<dependency>
-			<groupId>velocity</groupId>
+			<groupId>org.apache.velocity</groupId>
 			<artifactId>velocity</artifactId>
-			<version>1.5</version>
+			<version>1.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.velocity</groupId>
 			<artifactId>velocity-tools</artifactId>
-			<version>2.0-beta4</version>
+			<version>2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
