--- a/src/main/webapp/WEB-INF/velocity/velocity.properties
+++ b/src/main/webapp/WEB-INF/velocity/velocity.properties
@@ -4,5 +4,5 @@ default.contentType=UTF-8
 eventhandler.referenceinsertion.class=org.apache.velocity.app.event.implement.EscapeXmlReference
 eventhandler.escape.xml.match=/^(?!.*UNESCAPED_CDATA).*$/
 runtime.log.logsystem.class=org.apache.velocity.runtime.log.NullLogSystem
-class.resource.loader.cache=true
-resource.manager.cache.size=10
+file.resource.loader.cache=true
+resource.manager.cache.size=100
