--- a/src/main/resources/META-INF/application-unit.properties
+++ b/src/main/resources/META-INF/application-unit.properties
@@ -7,5 +7,8 @@ db.password=postgres
 sparql.url=something1
 solr.url=something2
 
+#export properties
+export.workers.count=1
+
 
 sparql.timeout=360000
