first test comparing sql / sparql data

--- a/src/main/resources/META-INF/application-dev.properties
+++ b/src/main/resources/META-INF/application-dev.properties
@@ -28,9 +28,9 @@ sparql.timeout=360000
 
 #Virtuoso
 
-#sparql.url=http://kant:8890/sparql
+sparql.url=http://kant:8890/sparql
 #Jena
-sparql.url=http://kant:3030/np/query?output=json
+#sparql.url=http://kant:3030/np/query?output=json
 #BigData
 #sparql.url=http://kant:4040/bigdata/sparql?output=json
 
