--- a/src/main/resources/META-INF/application-dev.properties
+++ b/src/main/resources/META-INF/application-dev.properties
@@ -37,3 +37,7 @@ sparql.url=http://kant:8890/sparql
 
 #SOLR database
 solr.url=http://crick:8985/solr
+
+#Client id and secret for auth0
+auth0.clientId=CLIENT_ID_JUST_FOR_DEV
+auth0.clientSecret=SECRET_ID_JUST_FOR_DEV
