--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,14 @@
 		</dependency>
 
 
+		<!-- JWT -->
+
+		<dependency>
+		    <groupId>com.auth0</groupId>
+		    <artifactId>java-jwt</artifactId>
+		    <version>0.3</version>
+		</dependency>
+
 		<!-- TEST -->
 
 		<dependency>
@@ -287,19 +295,6 @@
 		</dependency>
 		
 		
-		<!-- API authentication -->
-		<dependency>
-		  <groupId>net.threescale</groupId>
-		  <artifactId>threescale-api</artifactId>
-		  <version>3.0.1</version>
-			<exclusions>
-				<exclusion>
-					<groupId>xml-apis</groupId>
-					<artifactId>xml-apis</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
 		<dependency>
 		    <groupId>sib.calipho</groupId>
 		    <artifactId>spring-security-auth0</artifactId>
