all tests are now running

--- a/src/main/resources/META-INF/application-unit.properties
+++ b/src/main/resources/META-INF/application-unit.properties
@@ -13,4 +13,6 @@ export.workers.count=1
 
 sparql.timeout=360000
 
-auth0.clientSecret=secret_test
+#Client id and secret for auth0
+auth0.clientId=CLIENT_ID_JUST_FOR_TEST
+auth0.clientSecret=WU9VUl9TRUNSRVRfSUQ=
