--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,15 @@
 	<artifactId>nextprot-api-master</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<description>An API to access nextprot data</description>
+	<description>An API to access and search for nextprot data</description>
 	<url>https://api.nextprot.org</url>
+
+	<developers>
+		<developer>
+			<name>NextProt Team</name>
+			<email>ndu@isb-sib.chm</email>
+		</developer>
+	</developers>
 
 	<properties>
 		<spring.version>3.2.8.RELEASE</spring.version>
@@ -55,6 +62,8 @@
 			<version>4.4.0</version>
 		</dependency>
 
+
+		<!-- Commons -->
 
 		<dependency>
 			<groupId>commons-fileupload</groupId>
@@ -296,6 +305,57 @@
 
 		<pluginManagement>
 			<plugins>
+
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>2.0.2</version>
+					<configuration>
+						<source>1.6</source>
+						<target>1.6</target>
+					</configuration>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<executions>
+						<execution>
+							<id>attach-sources</id>
+							<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+
+				<plugin>
+					<artifactId>maven-eclipse-plugin</artifactId>
+					<version>2.5.1</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>2.8.1</version>
+					<executions>
+						<execution>
+							<id>attach-javadocs</id>
+							<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>versions-maven-plugin</artifactId>
+					<version>2.1</version>
+				</plugin>
+
+
+
+
 				<plugin>
 					<groupId>org.mortbay.jetty</groupId>
 					<artifactId>jetty-maven-plugin</artifactId>
