--- a/nextprot-api-web/pom.xml
+++ b/nextprot-api-web/pom.xml
@@ -12,9 +12,14 @@
 
 	<groupId>org.nextprot</groupId>
 	<artifactId>nextprot-api-web</artifactId>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.nextprot</groupId>
+			<artifactId>nextprot-api-commons</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.nextprot</groupId>
 			<artifactId>nextprot-api-core</artifactId>
@@ -22,8 +27,67 @@
 		</dependency>
 	</dependencies>
 
+
 	<build>
 		<finalName>nextprot-api-web</finalName>
-	</build>
 
+		<plugins>
+
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<configuration>
+					<!-- <jettyXml>src/etc/jetty-jmx.xml</jettyXml> -->
+					<!-- <scanIntervalSeconds>10</scanIntervalSeconds> -->
+					<webAppConfig>
+						<contextPath>/${project.name}</contextPath>
+					</webAppConfig>
+					<stopKey>foo</stopKey>
+					<stopPort>9999</stopPort>
+					<systemproperties>
+						<systemproperty>
+							<name>org.apache.commons.logging.Log</name>
+							<value>
+								org.apache.commons.logging.impl.Log4JLogger
+							</value>
+						</systemproperty>
+						<systemproperty>
+							<name>log4j.configuration</name>
+							<value>file:./src/main/resources/log4j.xml</value>
+						</systemproperty>
+					</systemproperties>
+				</configuration>
+				<dependencies>
+					<!-- Need this for the ehcache logging -->
+
+					<dependency>
+						<groupId>log4j</groupId>
+						<artifactId>log4j</artifactId>
+						<version>1.2.16</version>
+					</dependency>
+
+				</dependencies>
+				<executions>
+					<execution>
+						<id>start-jetty</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<scanIntervalSeconds>0</scanIntervalSeconds>
+							<daemon>true</daemon>
+						</configuration>
+					</execution>
+					<execution>
+						<id>stop-jetty</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
