moving base tests inside java because they are not used but todo: check if there is a way to compile with the abstract class tests so they are included , check the best way to do this

--- a/nextprot-api-core/pom.xml
+++ b/nextprot-api-core/pom.xml
@@ -22,17 +22,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.nextprot</groupId>
-			<artifactId>nextprot-api-rdf</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.nextprot</groupId>
-			<artifactId>nextprot-api-user</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.nextprot</groupId>
-			<artifactId>nextprot-api-solr</artifactId>
+			<artifactId>nextprot-api-users</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
