--- a/nextprot-api-solr/pom.xml
+++ b/nextprot-api-solr/pom.xml
@@ -17,12 +17,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.nextprot</groupId>
-			<artifactId>nextprot-api-commons</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.nextprot</groupId>
-			<artifactId>nextprot-api-user</artifactId>
+			<artifactId>nextprot-api-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
