--- a/nextprot-api-commons/pom.xml
+++ b/nextprot-api-commons/pom.xml
@@ -18,6 +18,20 @@
 
 	<build>
 		<finalName>nextprot-api-commons</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.2</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>test-jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
 	</build>
 
 </project>
