mvn install -DskipTests is working, now need to fix the test dependencies

--- a/nextprot-api-core/pom.xml
+++ b/nextprot-api-core/pom.xml
@@ -22,8 +22,21 @@
 		</dependency>
 		<dependency>
 			<groupId>org.nextprot</groupId>
-			<artifactId>nextprot-api-users</artifactId>
+			<artifactId>nextprot-api-commons</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.nextprot</groupId>
+			<artifactId>nextprot-api-user</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<!-- used for tests -->
+		<dependency>
+			<groupId>org.nextprot</groupId>
+			<artifactId>nextprot-api-commons</artifactId>
+			<version>${project.version}</version>
+			<type>test-jar</type>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
