--- a/nextprot-api-web/pom.xml
+++ b/nextprot-api-web/pom.xml
@@ -17,6 +17,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.nextprot</groupId>
+			<artifactId>nextprot-api-user</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.nextprot</groupId>
 			<artifactId>nextprot-api-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
