moving migration scripts in correct place

--- a/user/pom.xml
+++ b/user/pom.xml
@@ -39,6 +39,20 @@
 		<finalName>nextprot-api-user</finalName>
 		<plugins>
 			<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<version>3.0</version>
+				<configuration>
+					<driver>org.postgresql.Driver</driver>
+					<url>jdbc:postgresql://crick:5432/np_unit</url>
+					<user>postgres</user>
+					<password>postgres</password>
+					<schemas>
+						<schema>np_users</schema>
+					</schemas>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>properties-maven-plugin</artifactId>
 				<version>1.0-alpha-2</version>
@@ -58,5 +72,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
