--- a/test-diff-rdf-db/pom.xml
+++ b/test-diff-rdf-db/pom.xml
@@ -17,6 +17,18 @@
 
 	<build>
 		<finalName>nextprot-api-test-rdf-db-diff/</finalName>
+		<!-- should use integration tests instead of surfire. TODO Look at maven failsafe plugin -->
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.4.2</version>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+		</plugins>
+
 	</build>
 
 	<dependencies>
@@ -34,5 +46,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+
 
 </project>
