configuring demo sparql queries first step

--- a/demo-sparql-queries/pom.xml
+++ b/demo-sparql-queries/pom.xml
@@ -22,7 +22,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.nextprot</groupId>
-			<artifactId>nextprot-api-rdf</artifactId>
+			<artifactId>nextprot-api-commons</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<!-- used for tests -->
