ignore alignment conflict annotation type causing error in cur 6 during ttl generation

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,31 @@ velocity.log.*
 npapi.log
 AnnotationMVCTest.out.xml
 MANIFEST.MF
+commons/.settings/org.eclipse.jdt.core.prefs
+commons/.settings/org.eclipse.wst.common.component
+commons/.settings/org.eclipse.wst.common.project.facet.core.xml
+core/.settings/org.eclipse.jdt.core.prefs
+core/.settings/org.eclipse.wst.common.component
+core/.settings/org.eclipse.wst.common.project.facet.core.xml
+demo-sparql-queries/.settings/org.eclipse.jdt.core.prefs
+demo-sparql-queries/.settings/org.eclipse.wst.common.component
+demo-sparql-queries/.settings/org.eclipse.wst.common.project.facet.core.xml
+rdf/.settings/org.eclipse.jdt.core.prefs
+rdf/.settings/org.eclipse.wst.common.component
+rdf/.settings/org.eclipse.wst.common.project.facet.core.xml
+solr/.settings/org.eclipse.jdt.core.prefs
+solr/.settings/org.eclipse.wst.common.component
+solr/.settings/org.eclipse.wst.common.project.facet.core.xml
+test-diff-rdf-db/.settings/org.eclipse.jdt.core.prefs
+test-diff-rdf-db/.settings/org.eclipse.wst.common.component
+test-diff-rdf-db/.settings/org.eclipse.wst.common.project.facet.core.xml
+user/.settings/org.eclipse.jdt.core.prefs
+user/.settings/org.eclipse.wst.common.component
+user/.settings/org.eclipse.wst.common.project.facet.core.xml
+web/.settings/.jsdtscope
+web/.settings/org.eclipse.jdt.core.prefs
+web/.settings/org.eclipse.wst.common.component
+web/.settings/org.eclipse.wst.common.project.facet.core.xml
+web/.settings/org.eclipse.wst.jsdt.ui.superType.container
+web/.settings/org.eclipse.wst.jsdt.ui.superType.name
+web/.settings/org.eclipse.wst.validation.prefs
