--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<developers>
 		<developer>
 			<name>NextProt Team</name>
-			<email>ndu@isb-sib.chm</email>
+			<email>ndu@isb-sib.ch</email>
 		</developer>
 	</developers>
 
@@ -45,6 +45,7 @@
 		<module>core</module>
 		<module>rdf</module>
 		<module>solr</module>
+		<module>security</module>
 		<module>web</module>
 		<module>demo-sparql-queries</module>
 		<module>test-diff-rdf-db</module>
