--- a/user/pom.xml
+++ b/user/pom.xml
@@ -18,6 +18,11 @@
 			<artifactId>nextprot-api-commons</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.nextprot</groupId>
+            <artifactId>nextprot-api-security</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 		<dependency>
 			<groupId>org.nextprot</groupId>
 			<artifactId>nextprot-api-commons</artifactId>
@@ -25,6 +30,7 @@
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
