implementing security to work with both users and applications

--- a/security/pom.xml
+++ b/security/pom.xml
@@ -20,6 +20,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.nextprot</groupId>
+			<artifactId>nextprot-api-user</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.nextprot</groupId>
 			<artifactId>nextprot-api-commons</artifactId>
 			<version>${project.version}</version>
 			<type>test-jar</type>
