new method to return all parents but the root node and its use in annotation domain for retrieving parent predicates

--- a/commons/src/main/resources/application-dev.properties
+++ b/commons/src/main/resources/application-dev.properties
@@ -29,6 +29,7 @@ sparql.timeout=360000
 #Virtuoso
 
 sparql.url=http://kant:8890/sparql
+#sparql.url=http://uat-web2:8890/sparql
 #Jena
 #sparql.url=http://kant:3030/np/query?output=json
 #BigData
