changing roles to authorities

--- a/user/pom.xml
+++ b/user/pom.xml
@@ -42,7 +42,7 @@
 				<version>3.0</version>
 				<configuration>
 					<driver>org.postgresql.Driver</driver>
-					<url>jdbc:postgresql://crick.isb-sib.ch:5432/np_unit</url>
+					<url>jdbc:postgresql://crick.isb-sib.ch:5432/np_users</url>
 					<user>postgres</user>
 					<password>postgres</password>
 					<schemas>
