--- a/solr/pom.xml
+++ b/solr/pom.xml
@@ -20,6 +20,11 @@
 			<artifactId>nextprot-api-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.nextprot</groupId>
+			<artifactId>nextprot-api-user</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
