adding security and cache to spring profiles

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
  
     <context-param>
       <param-name>spring.profiles.default</param-name>
-      <param-value>pro</param-value>
+      <param-value>pro,cache,security</param-value>
     </context-param>
 
   
