Removal of all NPSecurityContext method calls from all nextprot-api-user controllers

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -48,6 +48,7 @@
     </filter-mapping>
      
     <!-- Setting UTF-8 -->
+    <!-- this filter should have a mapping -->
 	  <filter>
 	    <filter-name>Spring character encoding filter</filter-name>
 	    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
