--- a/user/pom.xml
+++ b/user/pom.xml
@@ -13,6 +13,11 @@
 	<packaging>jar</packaging>
 
 	<dependencies>
+                <dependency>
+                        <groupId>org.nextprot</groupId>
+                        <artifactId>nextprot-queries</artifactId>
+                        <version>0.0.1-SNAPSHOT</version>
+                </dependency>
 		<dependency>
 			<groupId>org.nextprot</groupId>
 			<artifactId>nextprot-api-security</artifactId>
