--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -86,7 +86,7 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <!--  configure pretty print
+    <!--  configure pretty print   -->
     <filter>
       <filter-name>XmlPrettyPrintFilter</filter-name>
       <filter-class>org.nextprot.api.commons.utils.XmlPrettyPrintFilter</filter-class>
@@ -96,5 +96,4 @@
       <filter-name>XmlPrettyPrintFilter</filter-name>
       <url-pattern>*.xml</url-pattern>
     </filter-mapping>
-   -->
 </web-app>
