--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.nextprot</groupId>
 		<artifactId>nextprot-api-master</artifactId>
-		<version>0.1.0</version>
+		<version>0.1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
