--- a/commons/src/main/resources/application-dev.properties
+++ b/commons/src/main/resources/application-dev.properties
@@ -38,7 +38,7 @@ sparql.url=http://kant:8890/sparql
 
 
 #SOLR database
-solr.url=http://crick:8985/solr
+solr.url=http://localhost:8985/solr
 
 #Client id and secret for auth0
 auth0.clientId=CLIENT_ID_JUST_FOR_DEV
