adding provider that asks auth0 for a profile if access token is provided instead of jwt

--- a/commons/src/main/resources/application-dev.properties
+++ b/commons/src/main/resources/application-dev.properties
@@ -43,3 +43,5 @@ solr.url=http://crick:8985/solr
 #Client id and secret for auth0
 auth0.clientId=CLIENT_ID_JUST_FOR_DEV
 auth0.clientSecret=WU9VUl9TRUNSRVRfSUQ=
+#Domain is not used for the moment, but may be used to access profile based on access token
+auth0.clientDomain=nextprot.auth0.com
