--- a/commons/src/main/resources/application-unit.properties
+++ b/commons/src/main/resources/application-unit.properties
@@ -16,3 +16,4 @@ sparql.timeout=360000
 #Client id and secret for auth0
 auth0.clientId=CLIENT_ID_JUST_FOR_TEST
 auth0.clientSecret=WU9VUl9TRUNSRVRfSUQ=
+auth0.clientDomain=nextprot.auth0.com
