--- a/security/pom.xml
+++ b/security/pom.xml
@@ -32,8 +32,8 @@
 		</dependency>
 		<dependency>
 			<groupId>com.auth0</groupId>
-			<artifactId>java-jwt</artifactId>
-			<version>0.3</version>
+			<artifactId>auth0-servlet</artifactId>
+			<version>2.0</version>
 		</dependency>
 	</dependencies>
 
