--- a/pom.xml
+++ b/pom.xml
@@ -186,7 +186,7 @@
 		<dependency>
 			<groupId>org.jsondoc</groupId>
 			<artifactId>jsondoc-springmvc</artifactId>
-			<version>1.5.0-SNAPSHOT</version>
+			<version>1.1.8</version>
 		</dependency>
 
 		<!-- AOP dependency -->
