cleaning up some unnecessary resources (asp)

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -16,6 +16,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.nextprot</groupId>
 			<artifactId>nextprot-api-user</artifactId>
 			<version>${project.version}</version>
