--- a/commons/src/main/resources/application-unit.properties
+++ b/commons/src/main/resources/application-unit.properties
@@ -17,3 +17,7 @@ sparql.timeout=360000
 auth0.clientId=CLIENT_ID_JUST_FOR_TEST
 auth0.clientSecret=WU9VUl9TRUNSRVRfSUQ=
 auth0.clientDomain=nextprot.auth0.com
+
+solr.url=http://localhost:8985/solr
+
+
