--- a/commons/src/main/resources/application-dev.properties
+++ b/commons/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 #Database for data
 db.data.driver=org.postgresql.Driver
 #db.data.url=jdbc:postgresql://crick:5432/np_20150126
-db.data.url=jdbc:postgresql://localhost:5432/np_20150126
+db.data.url=jdbc:postgresql://crick:5432/np_20150126
 #db.data.url=jdbc:postgresql://uat-web1:5432/np_annot_uat
 db.data.username=postgres
 db.data.password=postgres
