--- a/pom.xml
+++ b/pom.xml
@@ -319,6 +319,18 @@
 
 	<build>
 		<plugins>
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-war-plugin</artifactId>
+		<version>2.4</version>
+		<configuration>
+		    <archive>
+			<manifest>
+			    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+			</manifest>
+		    </archive>
+		</configuration>
+	    </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
