--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
 		<dependency>
 			<groupId>org.nextprot</groupId>
 			<artifactId>nextprot-queries</artifactId>
-			<version>0.0.12-SNAPSHOT</version>
+			<version>0.1.0</version>
 		</dependency>
 
 		<dependency>
