--- a/commons/src/main/resources/application-dev.properties
+++ b/commons/src/main/resources/application-dev.properties
@@ -39,7 +39,7 @@ sparql.url=http://kant:8890/sparql
 
 
 #SOLR database
-solr.url=http://localhost:8985/solr
+solr.url=http://crick:8985/solr
 #solr.url=http://crick:8985/solr
 
 #Client id and secret for auth0
