--- a/web/pom.xml
+++ b/web/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>nextprot-api-master</artifactId>
 		<groupId>org.nextprot</groupId>
-        <version>0.1.3-SNAPSHOT</version>
+        <version>0.1.3</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
