changes for CALIPHOMISC-128 and CALIPHOMISC-96

--- a/commons/src/main/resources/application-unit.properties
+++ b/commons/src/main/resources/application-unit.properties
@@ -4,7 +4,7 @@ db.username=postgres
 db.password=postgres
 
 #Some other properties
-sparql.url=something1
+sparql.url=http://kant:8890/sparql
 solr.url=http://crick:8985/solr
 
 #export properties
