adding github access token for the documentation

--- a/commons/src/main/resources/application-dev.properties
+++ b/commons/src/main/resources/application-dev.properties
@@ -47,3 +47,6 @@ auth0.clientId=CLIENT_ID_JUST_FOR_DEV
 auth0.clientSecret=WU9VUl9TRUNSRVRfSUQ=
 #Domain is not used for the moment, but may be used to access profile based on access token
 auth0.clientDomain=nextprot.auth0.com
+
+#Github token set only for pro env
+github.accesstoken=undefined
