--- a/commons/src/main/resources/application-unit.properties
+++ b/commons/src/main/resources/application-unit.properties
@@ -18,5 +18,5 @@ auth0.clientId=CLIENT_ID_JUST_FOR_TEST
 auth0.clientSecret=WU9VUl9TRUNSRVRfSUQ=
 auth0.clientDomain=nextprot.auth0.com
 
-
-
+#Github token set only for pro env
+github.accesstoken=undefined
