--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,16 @@
 				<version>${project.version}</version>
 			</dependency>
 
+	<!-- used for tests -->
+	<dependency>
+	    <groupId>org.nextprot</groupId>
+	    <artifactId>nextprot-api-commons</artifactId>
+	    <version>${project.version}</version>
+	    <type>test-jar</type>
+	    <scope>test</scope>
+	</dependency>
+
+
 		</dependencies>
 
 	</dependencyManagement>
