--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.nextprot</groupId>
 		<artifactId>nextprot-api-master</artifactId>
-        <version>0.1.4-SNAPSHOT</version>
+        <version>0.1.4</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
