--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.nextprot</groupId>
 	<artifactId>nextprot-api-master</artifactId>
-	<version>0.1.4-SNAPSHOT</version>
+	<version>0.1.4</version>
 	<packaging>pom</packaging>
 	<description>An API to access and search for nextprot data</description>
 	<url>https://api.nextprot.org</url>
