--- a/user/pom.xml
+++ b/user/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>nextprot-api-master</artifactId>
 		<groupId>org.nextprot</groupId>
-		<version>0.1.5-SNAPSHOT</version>
+		<version>0.1.5</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
