--- a/web/pom.xml
+++ b/web/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>nextprot-api-master</artifactId>
 		<groupId>org.nextprot</groupId>
-        <version>0.1.7-SNAPSHOT</version>
+		<version>0.1.7-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -15,6 +15,11 @@
 	<packaging>war</packaging>
 
 	<dependencies>
+		<dependency>
+			<groupId>xmlunit</groupId>
+			<artifactId>xmlunit</artifactId>
+			<version>1.6</version>
+		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
