adding properties of references count in entry properties

--- a/commons/src/main/resources/application-dev.properties
+++ b/commons/src/main/resources/application-dev.properties
@@ -37,6 +37,7 @@ sparql.url=http://kant:8890/sparql
 #BigData
 #sparql.url=http://kant:4040/bigdata/sparql?output=json
 
+pepx.url=http://crick.isb-sib.ch/pepx/cgi-bin/pepx
 
 #SOLR database
 solr.url=http://kant:8983/solr
