--- a/pom.xml
+++ b/pom.xml
@@ -291,7 +291,12 @@
 			<artifactId>dbunit</artifactId>
 			<version>2.4.9</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.skyscreamer</groupId>
+			<artifactId>jsonassert</artifactId>
+			<version>1.2.3</version>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- manage git info -->
 		<dependency>
