Adding a dependency to access microsoft format files (org.apache.poi)

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -56,6 +56,12 @@
 			<artifactId>github-api</artifactId>
 			<version>1.69.69</version>
 		</dependency>
+		<!-- access microsoft format files -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.11</version>
+		</dependency>
 
 		<!-- used for tests -->
 		<dependency>
