Add maven task to fetch number of git commits

--- a/pom.xml
+++ b/pom.xml
@@ -337,6 +337,10 @@
                         <manifest>
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                         </manifest>
+						<manifestEntries>
+							<mode>development</mode>
+							<build>1322</build>
+						</manifestEntries>
                     </archive>
                 </configuration>
             </plugin>
