Api now has a build version

--- a/pom.xml
+++ b/pom.xml
@@ -338,8 +338,7 @@
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                         </manifest>
 						<manifestEntries>
-							<mode>development</mode>
-							<build>1322</build>
+							<gitCommitCountFile>git-commit-count.txt</gitCommitCountFile>
 						</manifestEntries>
                     </archive>
                 </configuration>
