Pointing to last nextprot db release

--- a/commons/src/main/resources/application-dev.properties
+++ b/commons/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 #Database for data
 db.data.driver=org.postgresql.Driver
 #db.data.url=jdbc:postgresql://crick:5432/np_20150126
-#db.data.url=jdbc:postgresql://crick:5432/np_20150504
-db.data.url=jdbc:postgresql://kant:5432/nextprot
+db.data.url=jdbc:postgresql://crick:5432/np_20150906
+#db.data.url=jdbc:postgresql://kant:5432/nextprot
 #db.data.url=jdbc:postgresql://uat-web1:5432/np_annot_uat
 db.data.username=postgres
 db.data.password=postgres
