--- a/commons/src/main/resources/application-unit.properties
+++ b/commons/src/main/resources/application-unit.properties
@@ -6,6 +6,7 @@ db.password=postgres
 #Some other properties
 sparql.url=http://kant:8890/sparql
 solr.url=http://crick:8983/solr
+#solr.url=http://localhost:8983/solr
 
 #export properties
 export.workers.count=1
