--- a/web/pom.xml
+++ b/web/pom.xml
@@ -130,6 +130,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.4.0</version>
 				<groupId>org.codehaus.mojo</groupId>
 				<executions>
 					<execution>
