--- a/web/pom.xml
+++ b/web/pom.xml
@@ -57,6 +57,13 @@
 			<version>1.69.69</version>
 		</dependency>
 
+		<!-- access microsoft format files -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.11</version>
+		</dependency>
+
 		<!-- used for tests -->
 		<dependency>
 			<groupId>org.nextprot</groupId>
