--- a/tasks/pom.xml
+++ b/tasks/pom.xml
@@ -45,6 +45,11 @@
 			<artifactId>nextprot-api-solr</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.2</version>
+		</dependency>
 		<!-- used for tests -->
 		<dependency>
 			<groupId>org.nextprot</groupId>
