--- a/commons/src/main/resources/application-dev.properties
+++ b/commons/src/main/resources/application-dev.properties
@@ -52,4 +52,4 @@ auth0.clientDomain=nextprot.auth0.com
 
 #Github token set only for pro env
 github.accesstoken=undefined
-github.doc.branch=master
+github.doc.branch=develop
