--- a/commons/src/main/resources/application-unit.properties
+++ b/commons/src/main/resources/application-unit.properties
@@ -21,6 +21,6 @@ auth0.clientDomain=nextprot.auth0.com
 
 #Github token set only for pro env
 github.accesstoken=undefined
-github.doc.branch=master
+github.doc.branch=develop
 
 pepx.url=undefined
