Reset module dependencies version LATEST -> RELEASE

--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
 		<dependency>
 			<groupId>org.nextprot</groupId>
 			<artifactId>nextprot-queries</artifactId>
-			<version>LATEST</version>
+			<version>RELEASE</version>
 		</dependency>
 
 		<dependency>
