adding statements db for test

--- a/commons/src/main/resources/application-dev.properties
+++ b/commons/src/main/resources/application-dev.properties
@@ -21,6 +21,11 @@ db.user.maxPoolSize=1
 db.user.minPoolSize=1
 db.user.initialPoolSize=1
 
+db.statements.driver=****
+db.statements.url=****
+db.statements.username=nxbed
+db.statements.password=****
+
 #export properties
 export.workers.count=8
 
