adding core as dependency

--- a/annotation-builder/pom.xml
+++ b/annotation-builder/pom.xml
@@ -30,6 +30,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.nextprot</groupId>
+			<artifactId>nextprot-api-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.oracle.jdbc</groupId>
 			<artifactId>ojdbc7</artifactId>
 			<version>12.1.0.2</version>
