Create new isoform-mapper module

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
 		<module>solr</module>
 		<module>security</module>
 		<module>annotation-builder</module>
+		<module>isoform-mapper</module>
 		<module>web</module>
 		<module>test-diff-rdf-db</module>
 		<module>tasks</module>
