fixed class name for oracle driver

--- a/commons/src/main/resources/application-dev.properties
+++ b/commons/src/main/resources/application-dev.properties
@@ -21,7 +21,7 @@ db.user.maxPoolSize=1
 db.user.minPoolSize=1
 db.user.initialPoolSize=1
 
-db.statements.driver=oracle.jdbc.driver.oracledriver
+db.statements.driver=oracle.jdbc.driver.OracleDriver
 db.statements.url=jdbc:oracle:thin:@fou.isb-sib.ch:1526:SIBTEST3
 db.statements.username=nxbed
 db.statements.password=juventus
