Move specific entry mocking to core

--- a/isoform-mapper/pom.xml
+++ b/isoform-mapper/pom.xml
@@ -32,6 +32,13 @@
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.nextprot</groupId>
+			<artifactId>nextprot-api-core</artifactId>
+			<version>${project.version}</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
