--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<developers>
 		<developer>
 			<name>NextProt Team</name>
-			<email>ndu@isb-sib.ch</email>
+			<email>ndu@sib.swiss</email>
 		</developer>
 	</developers>
 
